...
            android:textColor="@color/black"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_route_name"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginTop="35dp"
            android:orientation="vertical" >

            <Button
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:id="@+id/input_route_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/input_route_close"
                android:text="Speichern" />

...
