...
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/route_edit"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_action_surface"
                    android:contentDescription="@string/action_edit"
                    android:padding="10dp"
                    android:src="@drawable/ic_pen"
                    android:tint="@color/colorPrimaryDark" />

                <ImageButton
                    android:id="@+id/route_delete"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_action_surface"
                    android:contentDescription="@string/action_delete"
                    android:padding="10dp"
...
